"""Remix SPA example demonstrating staging_srcs in rules_typescript.

Shows: React + Remix v2 SPA mode compilation, staging_srcs for route file
staging, vite_config injection of the Remix Vite plugin, and how framework
plugins interact with the Bazel sandbox.

To use from BCR, remove the local_path_override block below.
"""

module(
    name = "remix_app",
    version = "0.0.0",
)

bazel_dep(name = "rules_typescript", version = "0.1.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

register_toolchains("@rules_typescript//ts/toolchain:all")

# ─── Local development only ───────────────────────────────────────────────────
# Remove this block when publishing to BCR or using rules_typescript from the
# Bazel Central Registry.
local_path_override(
    module_name = "rules_typescript",
    path = "../..",
)

# ─── npm dependencies from pnpm-lock.yaml ────────────────────────────────────
# Run `pnpm install` in this directory to update pnpm-lock.yaml.
npm = use_extension("@rules_typescript//npm:extensions.bzl", "npm")
npm.translate_lock(pnpm_lock = "//:pnpm-lock.yaml")
use_repo(npm, "npm")

bazel_dep(name = "gazelle", version = "0.47.0")
